fixed mobile overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,7 @@ body {
 	height: 100%;
 	position: absolute;
     z-index: -2;
+    overflow: hidden;
 }
 
 #navBar, #navBar ul, #navBar ul li, #navBar ul li a {
@@ -31,7 +32,7 @@ body {
 #navBar {
 	background-image: url("./png/Asset 16.png");
 	background-size: cover;
-    position: fixed;
+    position: absolute;
 	width: 100%;
 	height: 60px;
 	display: flex;
